# libpglite

./: .gitignore  Cargo.toml  PGLITE_POSTGRES_SOURCE  README.md  build.rs
docs/: ADR-0001-RUST-FACADE-AND-DYNAMIC-PLUGIN.md  ADR-0002-NATIVE-PGLITE-BUILD-LANE.md  ADR-0003-POSTGRES-CLIENT-TRANSPORT.md  ADR-0004-RUNTIME-READY-RELEASE-GATE.md  ADR-0005-PGLITEC-NATIVE-PORTABILITY.md  ADR-0006-NATIVE-BUILD-PLATFORM-FLOOR.md  ADR-0007-NATIVE-INITDB-AND-PREFIX-ARTIFACT.md  ADR-0008-NATIVE-EXTENSION-PARITY.md  ADR-0009-NATIVE-DEPENDENCY-PREFIX.md  ADR-0010-NATIVE-BACKEND-SYMBOL-CONTRACT.md  ADR-0011-NATIVE-RUNTIME-LIFECYCLE.md  ADR-0012-NATIVE-DIAGNOSTIC-MANIFESTS.md  ADR-0015-TOKIO-POSTGRES-SESSION-BACKEND-OUTPUT-DRAIN.md  ADR-0016-SYMLINKED-HOST-BINARY-BUNDLED-PLUGIN-RESOLUTION.md  ADR-0017-NATIVE-BACKEND-STDIN-SEALING.md  ADR-0018-PRODUCT-HOST-BUNDLED-PLUGIN-DEFAULT.md  LINUX-RELEASE-POLICY.md  README.md
native/: Cargo.toml  build.rs
plugin/: Cargo.toml  build.rs
plugin/src/: lib.rs
scripts/: audit-adr-closure.py  build-native-dependency-prefix.sh  check-native-other-extension-build.sh  describe-native-dependency-prefix.py  doctor-native-plugin-package.py  fetch-native-dependency-sources.py  generate-native-dependency-manifest.py  inventory-native-pglite-extensions.py  link-linux-native-plugin.sh  materialize-native-pglite-other-extensions.py  package-native-plugin-release.sh  preflight-linux-smolvm.sh  preflight-native-plugin-release.sh  prepare-native-pglite-link.sh  test-build-native-dependency-prefix.py  test-check-native-other-extension-build.py  test-describe-native-dependency-prefix.py  test-doctor-native-plugin-package.py  test-link-linux-native-plugin.py  (+10 more)
(+29 files in other folders)
