[package]
name = "libpglite-plugin-native"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false
build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
doctest = false

[dependencies]
libpglite = { path = ".." }
libpglite-native = { path = "../native", features = ["internal-adapter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

